# genoresearch

./: .gitignore  CLAUDE.md  README.md  config.py  dark_gene_ids.json  dark_genes_reference.tsv  dashboard.py  dashboard_status.json  download_blastdb.py  findings.tsv  gene_queue.json  main.py  memory.json  program.md  pyproject.toml  requirements.txt  rescore_findings.py  start_dashboard.bat  start_ollama.bat  verified_by_claude.md
.claude/: launch.json
agent/: __init__.py  evaluator.py  memory.py  planner.py  ui.py
dashboard/: __init__.py  data_layer.py  log_parser.py
findings/: 387326 - Cysteine-Rich Small Scaffold Protein with Moderate .md  387487 - Arginine-Rich Small Scaffold Protein with Moderate .md  388732 - Cysteine-Rich Large Scaffold Protein with Moderate .md  400574 - Cysteine-Rich Small Scaffold Protein with Moderate .md  414261 - Cysteine-Rich Large Scaffold Protein with Moderate .md  497259 - Cysteine-Rich Small Scaffold Protein with Moderate .md  54063 - Cysteine-Rich Small Scaffold Protein with Moderate C.md  54078 - Cysteine-Rich Small Scaffold Protein with Moderate C.md  55673 - Cysteine-Rich Small Scaffold Protein with Moderate C.md  64790 - Histidine-Rich Small Scaffold Protein with Moderate .md  768098 - Cysteine-Rich Small Scaffold Protein with Moderate .md  79835 - Methionine-Rich Small Scaffold Protein with Moderate.md  84645 - Methionine-Rich Large Scaffold Protein with Moderate.md  84739 - Arginine-Rich Small Scaffold Protein with Moderate C.md  A0A087X0F4 - Serrate RNA Effector with Extreme Positive Char.md  (+975 more)
lab/: __init__.py  metrics.py  (+2 more)
(+63 files in other folders)
